<resources>
    <string name="app_name">ResuBuild</string>
    <string name="details">Details</string>
    <string name="pdf">Pdf</string>
    <string name="ats">ATS</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_details">Personal Details</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="location">Location</string>
    <string name="linkedin_profile">LinkedIn Profile</string>
    <string name="github_profile">Github Profile</string>
    <string name="back">Back</string>
    <string name="continue_">Continue</string>
    <string name="email_address">Email Address</string>
    <string name="get_view">Get View</string>
    <string name="back_button">Back Button</string>
    <string name="ats_score">ATS SCORE</string>
    <string name="experience">Experience</string>
    <string name="university_name">University Name</string>
    <string name="start_date">Starting Date</string>
    <string name="end_date">Ending Date</string>
    <string name="title_of_degree">Title of Degree</string>
    <string name="remove">Remove</string>
    <string name="job_title">Job Title</string>
    <string name="company">Company</string>
    <string name="description">Description</string>
    <string name="skill_name">Skill Name</string>
    <string name="title_of_project">Title of Project</string>
    <string name="organization">Organization</string>
    <string name="name_of_certification">Name of Certification</string>
    <string name="issuing_organization">Issuing Organization</string>
    <string name="issued_date">Issued Date</string>
    <string name="enter_your_summary_here">Enter your summary here</string>
    <string name="education">Education</string>
    <string name="expand_education">Expand Education</string>
    <string name="add_education">Add Education</string>
    <string name="add_experience">Add Experience</string>
    <string name="projects">Projects</string>
    <string name="expand_projects">Expand Projects</string>
    <string name="add_project">Add Project</string>
    <string name="skills">Skills</string>
    <string name="expand_skills">Expand Skills</string>
    <string name="add_skill">Add Skill</string>
    <string name="certifications">Certifications</string>
    <string name="expand_certifications">Expand Certifications</string>
    <string name="add_certification">Add Certification</string>
    <string name="save">Save</string>
    <string name="expand_summary">Expand Summary</string>
    <string name="summary">Summary</string>
    <string name="expand_personal_details">Expand Personal Details</string>
    <string name="prev">Prev</string>
    <string name="_2012_2023">2012 - 2023</string>
    <string name="next">Next</string>
    <string name="ok">OK</string>
    <string name="link_to_certificate">Link to Certificate\n</string>
    <string name="add_bullet">Add Bullet</string>
    <string name="bullet_s_description">Bullet\'s Description</string>
    <string name="add_resume">Add Resume</string>
    <string name="resubuild">ResuBuild</string>
    <string name="resume_title">Resume Title</string>
    <string name="timestamp">TimeStamp</string>
</resources>