<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintWidth_max="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <EditText
                android:id="@+id/et_cert_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="certificationName"
                android:hint="@string/name_of_certification"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/et_cert_organization"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="organizationName"
                android:hint="@string/issuing_organization"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/et_issued_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="certificationDate"
                android:hint="@string/issued_date"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/et_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="certificationDate"
                android:hint="@string/link_to_certificate"
                android:inputType="date"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <Button
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:backgroundTint="@color/error"
                android:textColor="@color/white"
                android:layout_gravity="end" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


</androidx.constraintlayout.widget.ConstraintLayout>