<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintWidth_max="450dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_job_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="jobTitle"
                    android:hint="@string/job_title"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A" />

                <EditText
                    android:id="@+id/et_location"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autofillHints="postalAddress"
                    android:hint="@string/location"
                    android:inputType="text"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A" />

            </LinearLayout>






            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_start_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_weight="1"
                    android:autofillHints="educationStartDate"
                    android:hint="@string/start_date"
                    android:focusable="false"
                    android:importantForAutofill="yes"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A" />

                <EditText
                    android:id="@+id/et_end_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="1"
                    android:autofillHints="educationEndDate"
                    android:hint="@string/end_date"
                    android:focusable="false"
                    android:importantForAutofill="yes"
                    android:inputType="date"
                    android:minHeight="48dp"
                    android:textColorHint="#546E7A" />

            </LinearLayout>

            <EditText
                android:id="@+id/et_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="name"
                android:hint="@string/company"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="#546E7A" />

            <EditText
                android:id="@+id/et_job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minLines="3"
                android:autofillHints="jobDescription"/>

            <Button
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remove"
                android:backgroundTint="@color/error"
                android:textColor="@color/white"
                android:layout_gravity="end" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>