<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintWidth_max="450dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_resume_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/resume_title"
                android:gravity="center"
                android:textSize="18sp"
                android:minHeight="48dp"
                android:autofillHints="skillName" />

            <TextView
                android:id="@+id/tv_time_stamp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/timestamp"
                android:gravity="center"
                android:textSize="18sp"
                android:minHeight="48dp"
                android:autofillHints="skillName" />

            <Button
                android:id="@+id/btn_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/remove"
                android:backgroundTint="@color/error"
                android:textColor="@color/white" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>